// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack renders default 1`] = `
<DocumentFragment>
  <div
    class="css-15twc3j"
    data-cy="stack"
  >
    <div>
      Lorem Ipsum is simply dummy text
    </div>
    <div>
      of the printing and typesetting industry.
    </div>
    <div>
      Lorem Ipsum has been the industry's
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack renders with a custom tag 1`] = `
<DocumentFragment>
  <ul
    class="css-15wkwvi"
    data-cy="stack"
  >
    <li>
      Lorem Ipsum is simply dummy text
    </li>
    <li>
      of the printing and typesetting industry.
    </li>
    <li>
      Lorem Ipsum has been the industry's
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Stack renders with different spacingSize 1`] = `
<DocumentFragment>
  <div
    class="css-p1p1p3"
    data-cy="stack"
  >
    <div>
      Lorem Ipsum is simply dummy text
    </div>
    <div>
      of the printing and typesetting industry.
    </div>
    <div>
      Lorem Ipsum has been the industry's
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack renders with responsive spacingSize 1`] = `
<DocumentFragment>
  <div
    class="css-i8pzeb"
    data-cy="stack"
  >
    <div>
      Lorem Ipsum is simply dummy text
    </div>
    <div>
      of the printing and typesetting industry.
    </div>
    <div>
      Lorem Ipsum has been the industry's
    </div>
  </div>
</DocumentFragment>
`;
